@@ -7,6 +7,7 @@ Version 1.3
  - Fixed Issue 397 - Update remotec ZXT-120 config thanks to gizmocuz (Alex)
  - Fixed Issue 396 - Add Z-Wave.me RaZberry thanks to steph10200 (Alex)
  - Fixed Issue 398 - Add Z-Wave.me USB Stick thanks to ugo.viti (Alex)
+ - Fixed Issue 389 - Add Evolve LRM-AS/LSM-15 Config file thanks to Gwmullin (Alex)
 
 Version 1.2 
  - Released on 15/10/14
